--- a/index.html
+++ b/index.html
@@ -5,36 +5,20 @@
 </head>
 <body>
 <section class="container">
-    <article class="each">
-        <h1>Building our own map and filter functions to support objects</h1>
+    <!--<article class="each expanded">-->
+        <!--<h1>Some thoughts on vanilla js</h1>-->
         <!--<div class="expanded">-->
             <!--<p>Repellendus, cras proident aute exercitation tempore potenti nisl ullam ab corrupti fugiat, lacinia aliquet aut anim metus fusce taciti sagittis incididunt perferendis ut imperdiet molestias nascetur exercitation iure possimus potenti, nullam sapiente ducimus, sint enim morbi. Maxime cursus cupiditate vero, rhoncus dictum! Provident aliquet! Irure. Augue netus tortor magna metus, varius lobortis non magnis vero. Irure justo officiis iaculis cupiditate. Arcu omnis consequatur ullamcorper. Quidem, volutpat, morbi aspernatur! Taciti in.</p>-->
-            <!--<button />-->
+            <!--<div class="button">-->
+                <!--<div class="button-left"></div>-->
+                <!--<div class="button-right"></div>-->
+                <!--<div class="button-top"></div>-->
+                <!--<div class="button-bottom"></div>-->
+            <!--</div>-->
+            <!--<div class="box-border"></div>-->
+            <!--<div class="box-back"></div>-->
         <!--</div>-->
-        <div class="bottom-border"></div>
-    </article>
-    <article class="each">
-        <h1>I’ve been organizing my React files the wrong way, and you probably have too.</h1>
-        <div class="bottom-border"></div>
-        <div class="expanded">
-            <!--<p>Repellendus, cras proident aute exercitation tempore potenti nisl ullam ab corrupti fugiat, lacinia aliquet aut anim metus fusce taciti sagittis incididunt perferendis ut imperdiet molestias nascetur exercitation iure possimus potenti, nullam sapiente ducimus, sint enim morbi. Maxime cursus cupiditate vero, rhoncus dictum! Provident aliquet! Irure. Augue netus tortor magna metus, varius lobortis non magnis vero. Irure justo officiis iaculis cupiditate. Arcu omnis consequatur ullamcorper. Quidem, volutpat, morbi aspernatur! Taciti in.</p>-->
-            <!--<button />-->
-        </div>
-    </article>
-    <article class="each expanded">
-        <h1>Some thoughts on vanilla js</h1>
-        <div class="expanded">
-            <p>Repellendus, cras proident aute exercitation tempore potenti nisl ullam ab corrupti fugiat, lacinia aliquet aut anim metus fusce taciti sagittis incididunt perferendis ut imperdiet molestias nascetur exercitation iure possimus potenti, nullam sapiente ducimus, sint enim morbi. Maxime cursus cupiditate vero, rhoncus dictum! Provident aliquet! Irure. Augue netus tortor magna metus, varius lobortis non magnis vero. Irure justo officiis iaculis cupiditate. Arcu omnis consequatur ullamcorper. Quidem, volutpat, morbi aspernatur! Taciti in.</p>
-            <div class="button">
-                <div class="button-left"></div>
-                <div class="button-right"></div>
-                <div class="button-top"></div>
-                <div class="button-bottom"></div>
-            </div>
-            <div class="box-border"></div>
-            <div class="box-back"></div>
-        </div>
-    </article>
+    <!--</article>-->
 </section>
 <script src="app.js"></script>
 </body>
