--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 </head>
 <body>
 <section class="container">
-    <article class="each expanded">
-        <h1>Some thoughts on vanilla js</h1>
-        <div class="expanded">
-            <p>Repellendus, cras proident aute exercitation tempore potenti nisl ullam ab corrupti fugiat, lacinia aliquet aut anim metus fusce taciti sagittis incididunt perferendis ut imperdiet molestias nascetur exercitation iure possimus potenti, nullam sapiente ducimus, sint enim morbi. Maxime cursus cupiditate vero, rhoncus dictum! Provident aliquet! Irure. Augue netus tortor magna metus, varius lobortis non magnis vero. Irure justo officiis iaculis cupiditate. Arcu omnis consequatur ullamcorper. Quidem, volutpat, morbi aspernatur! Taciti in.</p>
-            <div class="button">
-                <div class="button-left"></div>
-                <div class="button-right"></div>
-                <div class="button-top"></div>
-                <div class="button-bottom"></div>
-            </div>
-            <div class="box-border"></div>
-            <div class="box-back"></div>
-        </div>
-    </article>
+    <!--<article class="each expanded">-->
+        <!--<h1>Some thoughts on vanilla js</h1>-->
+        <!--<div class="bottom-border"></div>-->
+        <!--<div class="expanded">-->
+            <!--<p>Repellendus, cras proident aute exercitation tempore potenti nisl ullam ab corrupti fugiat, lacinia aliquet aut anim metus fusce taciti sagittis incididunt perferendis ut imperdiet molestias nascetur exercitation iure possimus potenti, nullam sapiente ducimus, sint enim morbi. Maxime cursus cupiditate vero, rhoncus dictum! Provident aliquet! Irure. Augue netus tortor magna metus, varius lobortis non magnis vero. Irure justo officiis iaculis cupiditate. Arcu omnis consequatur ullamcorper. Quidem, volutpat, morbi aspernatur! Taciti in.</p>-->
+            <!--<div class="button">-->
+                <!--<div class="button-left"></div>-->
+                <!--<div class="button-right"></div>-->
+                <!--<div class="button-top"></div>-->
+                <!--<div class="button-bottom"></div>-->
+            <!--</div>-->
+            <!--<div class="box-border"></div>-->
+            <!--<div class="box-back"></div>-->
+        <!--</div>-->
+    <!--</article>-->
 </section>
 <script src="app.js"></script>
 </body>
